# memanto

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  sdk-typescript.yml
docs/: CLI_USER_GUIDE.md  GETTING_STARTED.md  V2_QUICK_START.md
examples/claudecode-skills-memanto/lifecycle-hooks/: .env.example  .gitignore  README.md  demo_session_1.py  demo_session_2.py  demo_session_3.py  install.py  pyproject.toml
examples/claudecode-skills-memanto/lifecycle-hooks/.claude-plugin/: plugin.json
examples/claudecode-skills-memanto/lifecycle-hooks/hooks/: __init__.py  _common.py  session_start.py
examples/claudecode-skills-memanto/lifecycle-hooks/memanto_skills/: __init__.py  cli.py  client.py  config.py  extractor.py  installer.py  profile.py  skill_map.py
examples/claudecode-skills-memanto/lifecycle-hooks/tests/: conftest.py  test_client.py  test_hooks.py  (+4 more)
examples/langgraph-memanto/: README.md  requirements.txt
examples/langgraph-memanto-pr440/: .env.example  README.md  requirements.txt
examples/langgraph-memanto/basic_integration/: demo.py
examples/langgraph-memanto/core/: memanto_tools.py
examples/langgraph-memanto/cross_session_recall/: graph.py  main.py
examples/langgraph-memanto/custom_memory_saver/: agent.py  demo.py  langgraph_agent.py  memanto_memory.py  run_demo.py
examples/langgraph-memanto/memanto_base_store/: app.py  graph.py  run_contradiction.py  run_session_1.py  run_session_2.py
examples/langgraph-memanto/research_pipeline/: .gitignore  run_full_pipeline.py  run_research.py  run_writer.py  validate_offline.py
examples/langgraph-memory/langgraph_memanto/: nodes.py
integrations/claudecode/: CLAUDE.md  README.md  pyproject.toml
integrations/claudecode/claudecode_memanto/: __init__.py  cli.py  extractor.py  installer.py  profile.py
integrations/claudecode/hooks/: _common.py  on_prompt.py  on_stop.py
integrations/claudecode/tests/: conftest.py  test_client.py  test_extractor.py  test_installer.py  test_profile.py  test_skill_map.py
integrations/crewai/tests/: test_tools.py
integrations/langgraph/: pyproject.toml
integrations/langgraph/langgraph_memanto/: store.py  tools.py
integrations/langgraph/tests/: test_store.py  test_tools.py
integrations/mcp/memanto_mcp/: tools.py
memanto/: __init__.py
memanto/app/: main.py
memanto/app/models/: __init__.py
memanto/app/routes/: memory.py  sessions.py
memanto/app/services/: agent_service.py  conversation_memory_extraction_service.py  daily_analysis_service.py  memory_parsing_service.py  memory_read_service.py  memory_write_service.py  session_service.py
memanto/cli/: schedule_manager.py
memanto/cli/analyze/: letta_export.py  mem0_export.py  supermemory_export.py
memanto/cli/client/: direct_client.py  sdk_client.py
memanto/cli/commands/: __init__.py  _shared.py  core.py  memory.py  migrate.py  schedule.py
memanto/cli/config/: manager.py
memanto/cli/migrate/: __init__.py  mappers.py  runner.py
memanto/cli/ui/: display.py
sdks/typescript/: .gitignore  README.md  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdks/typescript/scripts/: fetch-openapi.mjs
sdks/typescript/src/: doctor.ts  index.ts  lifecycle.ts
sdks/typescript/test/: doctor.test.ts  lifecycle.test.ts  memanto.test.ts
tests/: conftest.py  test_api.py  test_cli.py  test_conversation_memory_extraction.py  test_memory_parsing.py  test_unit.py
(+10 files in other folders)
