[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudecode-memanto"
version = "0.1.0"
description = "Cross-session engineering memory for Claude Code + mattpocock/skills, powered by Memanto. Real lifecycle hooks + LLM distillation = zero repeated instructions."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<4"
authors = [
    { name = "Memanto", email = "info@memanto.ai" }
]
keywords = [
    "memanto",
    "moorcheh",
    "claude-code",
    "claude",
    "anthropic",
    "skills",
    "mattpocock",
    "agent memory",
    "semantic memory",
    "hooks",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "memanto>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9",
    "pytest-mock>=3.12.0,<4",
    "ruff>=0.14.6,<0.15",
    "mypy>=1.10.0,<2",
]

[project.scripts]
claudecode-memanto = "claudecode_memanto.cli:main"

[project.urls]
Homepage = "https://www.memanto.ai"
Documentation = "https://docs.memanto.ai"
Repository = "https://github.com/moorcheh-ai/memanto"
"Bug Tracker" = "https://github.com/moorcheh-ai/memanto/issues"

[tool.hatch.build.targets.wheel]
packages = ["claudecode_memanto", "hooks"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["B904", "E501", "B008", "C901"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Docstring-coverage configuration. Tests, dunder methods, private helpers, and
# the `main()` entry points of one-shot scripts are intentionally excluded —
# their behaviour is documented by name, by test cases, or by the module
# docstring directly above them.
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = true
ignore-semiprivate = true
ignore-property-decorators = true
ignore-module = false
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = true
fail-under = 80
exclude = ["tests"]
verbose = 0
quiet = false
color = true
